<resources>
    <string name="htp_text"> The first time you do practice, please complete practice 1 first and then go on to practice 2.
        The last day (6 days after the first practice session) you only need to do practice 1.
        Please make sure to send the results after the session!
        The following explanation holds for both practice 1 and 2.
        When the practice sessions starts,
        you will see a picture and a verb. The picture contains one or more people and their actions depict the verb.
        The actions will be described to you in a sentence with the verb and the people in the picture.
        Listen very carefully. A short pause follows. Next, you see another picture and another verb.
        This time, you will have to describe it yourself using the given verb and people in the picture.
        To describe the picture, you have to click on the microphone and then you can start speaking.
        Your voice will be detected automatically. This exercise of listening and speaking repeats 20 times.</string>
    <string name="int_trans">int_trans</string>
    <string name="exercise_number">exercise_number</string>
    <string name="date_completed">date_completed</string>
    <string name="baseline_toggle">baseline_toggle</string>
    <string name="user_ID">Not yet submitted</string>
    <string name="which_practice">which practice</string>
    <string name="password_prolific">This is the code you need for Prolific: 5B73A96C</string>
    <string name="used_names">used_names</string>
    <string name="which_logo">which_logo</string>
    <string name="number_of_practices">number_of_practices</string>
    <string name="first_practice">first_practice</string>
    <string name="notifaction_state">ON</string>
    <string name="notifaction">notification</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="app_name">D.A.M.N.</string>
    <string name="logo">logo</string>
    <string name="app_name_title_bar">Name</string>
    <string name="de_age_me_now">De-Age Me Now</string>
    <string name="AchievementsButtonDesc">TODO</string>
    <string name="HTPButtonDesc">TODO</string>
    <string name="HelpButtonDesc">TODO</string>
    <string name="PracticeButtonDesc">practiceButtonDesc</string>
    <string name="settingscontent">settingsContent</string>
    <string name="hello_there_i_m_mr_owl_good_luck_today_hoot_hoot">Hello, good luck today!</string>
    <string name="owl">owl</string>
    <string name="bubble">TODO</string>
    <string name="splashimage">TODO</string>
    <string name="homescreenimage">TODO</string>
    <string name="title_activity_practice_done">PracticeDone</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="practice">Practice</string>
    <string name="help">HELP</string>
    <string name="helpMessage">Here you can find help.</string>
    <string name="achievements">Achievements</string>
    <string name="how_to_play">How to play</string>
    <string name="logo_mainscreen">logo_mainscreen</string>
    <string name="placeholder_award_first_practice_done">First practice done award</string>
    <string name="placeholder_one_week_complete_award">One week complete award</string>
    <string name="placeholder_streak_days">1 day(s) streak </string>
    <string name="these_are_your_achievements">These are your achievements!</string>
    <string name="question_1"> How many exercises do I have to do every day? </string>
    <string name="answer_1">On day 1 you have to do practice 1 and 2. 6 days after the first practice you should do practice one. Practice 1 consists of 40 exercises and practice 2 of 52. </string>
    <string name="question_2">What happens when I forget to practice after 6 days?</string>
    <string name="answer_2">If it has been longer than this then unfortunately your data cannot be used for the purposes of this experiment.</string>

    <string name="question_3">Do I need internet to use this app?</string>
    <string name="answer_3">You need an internet connection to use this app. So please only practice when you have a WiFi or mobile data connection.</string>
    <string name="question_4">I accidentally closed the app during practice, what should I do now? </string>
    <string name="answer_4">Click on the practice button in the home screen. You automatically continue where you left off.</string>
    <string name="question_5">I do not like notifications. Can I turn them off?</string>
    <string name="answer_5">You can turn them off, but then you have to remind yourself that you have to practice. </string>
    <string name="question_6">Does the app store my personal data?</string>
    <string name="answer_6">The app does not store your personal data. Only your Prolific ID which is anonymous. </string>

    <string name="contact_us_at_damn_experiment_gmail_com">Contact us at: DAMN.experiment@gmail.com</string>
    <string name="today_s_practice_has_yet_to_be_completed">Today\'s practice has not yet been completed.		 </string>
    <string name="today_s_practice_has_been_completed">Today\'s practice has been completed.	</string>
    <string name="instructions_for_the_practice_exercises">Instructions for the practice exercises.</string>
    <string name="placeholder">placeholder</string>
    <string name="listen_to_the_description">Listen to the description</string>
    <string name="microphone">microphone</string>
    <string name="title_activity_practice_start_screen">PracticeActivityStartScreen</string>
    <string name="start_practising">Start practising</string>
    <string name="placeholder_explanation">Placeholder explanation</string>
    <string name="practice_start">Practice start</string>
    <string name="settings">Here you can change the settings</string>
    <string name="you_are_done">You are done. Good job!</string>
    <string name="practiceStartMessage">Start your practice here </string>


    <string name="homebuttonhouse">HomeButtonHouse</string>
    <string name="title_activity_example_practice">example_practice</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Example">Example</string>
    <string name="example_text">The image above depicts a boy, a girl and the verb "to chase". This picture could be described as follows:
        "The boy chases the girl". If you have to describe a picture, first think of what you want to say.
        Then press the microphone and speak the sentence out loud. </string>
    <string name="start_practice">Start practice</string>
    <string name="see_example">See example</string>
    <string name="notifications">Notifications</string>
    <string name="notification_time">Notification time:</string>
    <string name="change_notification_time">Change notification time</string>
    <string name="like">Like</string>
    <string name="title_activity_help_expandable">HelpExpandable</string>
    <string name="teeeeeeeeeest">teeeeeeeeeest</string>
    <string name="finish_code_placeholder"> end code placeholder</string>
    <string name="button_1">Button 1</string>
    <string name="text_1">Text 1</string>
    <string name="hiding_button">Hiding Button</string>
    <string name="dissapearing_text">Dissapearing text</string>
    <string name="explanation_aging">Cognitive ageing represents how the functioning of the brain declines in terms of language, concentration and memory. This process starts earlier than you think. From the age of 25 you can start to notice the effects of cognitive aging. But do not panic! By stimulating your language use, you can slow down this process. Thanks to the DAMN app you can easily de-age yourself.</string>
    <string name="question_aging"> What is cognitive aging? </string>
    <string name="title_activity_example_practice2">Example_practice2</string>
    <string name="title_activity_sound_check">Sound_check</string>
    <string name="sound_check">Sound check!</string>
    <string name="please_check_if_the_volume_of_your_phone_is_on_press_the_button_volume_check_below_if_you_hear_a_sound_you_are_ready_to_start">Please check if the volume of your phone is on. Press the button \'Volume check\' below. If you hear a sound you are ready to start.</string>
    <string name="go_to_sound_check">Go to sound check</string>
    <string name="go_to_short_demo">go to Short demo</string>
    <string name="mic_explanation">During the practice you will see a microphone button like the one above this text. When you press this button it becomes green and you can speak. You need to press the button while speaking. If the app does not continue to the next page, try again.</string>
    <string name="title_activity_example_practice3">Example_practice3</string>
    <string name="quick_practice_round">quick practice round</string>
    <string name="placeholder_ex_prac">Placeholder for actual example pratcie of a few rounds</string>
    <string name="hint">TextView</string>
    <string name="hintProlific">Fill in your name</string>
    <string name="id_explanation">Please enter your first and last name below before starting your practice.</string>
    <string name="username">Username:</string>
    <string name="title_activity_i_d_check">ID_check</string>
    <string name="practice_without_example">Practice 1</string>
    <string name="practice_with_example">practice_with_example</string>
    <string name="message_baseline_done"> On day one, please do practice 1 followed by practice 2. Six days later, please repeat practice 1. After each practice, please send us the results.</string>
    <string name="questions_go_to_help_here">Questions? go to help here</string>
    <string name="go_to_practice_with_examples">Go to practice with examples</string>
    <string name="practice_with_example_sound_check">Practice 2</string>
    <string name="volume_check">Volume check</string>
    <string name="you_completed_the_practice_without_examples_please_practice_with_examples_now">You completed practice session 1. Please complete practice session 2 now.</string>
    <string name="title_activity_baseline_end_screen1">BaselineEndScreen1</string>
    <string name="you_are_dooing_great">You are doing great!</string>
    <string name="example_describing_picture">Example of describing picture</string>

</resources>